--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -5,11 +5,70 @@
 <html>
     <head>
         <title>@title</title>
-        <link rel="stylesheet" media="screen" href="@routes.Assets.at("stylesheets/main.css")">
-        <link rel="shortcut icon" type="image/png" href="@routes.Assets.at("images/favicon.ico")">
-        <script src="@routes.Assets.at("javascripts/hello.js")" type="text/javascript"></script>
+		<meta charset="UTF-8">
+		<link href="@routes.Assets.at("stylesheets/bootstrap.min.css")" rel="stylesheet">
+		<link rel="stylesheet" type="text/css" href="@routes.Assets.at("stylesheets/style.css")">
+		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+		<script src="@routes.Assets.at("javascripts/bootstrap.min.js")"></script>
+		
+		
     </head>
     <body>
+	<header>
+	<!-- Logo -->
+	 <div class="row">
+            <div class="col-md-6 col-md-offset-3">
+                <a href="/"><img class="img-responsive img-rounded" src="@routes.Assets.at("img/logo.jpg")" alt="Logo"></a>
+            </div>
+	</div>
+		<!-- Navigation -->
+    <nav class="navbar navbar-inverse" role="navigation">
+        <div class="container">
+            <!-- Brand and toggle get grouped for better mobile display -->
+            <div class="navbar-header">
+                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+                    <span class="sr-only">Toggle navigation</span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                </button>
+                
+            </div>
+            <!-- Collect the nav links, forms, and other content for toggling -->
+            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+                <ul class="nav navbar-nav">
+                    <li>
+                        <a href="index.html">Mieten</a>
+                    </li>
+                    <li>
+						<a href="fahrzeuguebersicht.html">Fahrzeugmodelle</a>
+                    </li>
+                    <li>
+                        <a href="ueberuns.html">ÜberUns</a>
+                    </li>
+                </ul>
+            </div>
+            <!-- /.navbar-collapse -->
+        </div>
+        <!-- /.container -->
+    </nav>
+	</header>
+	
+	
         @content
+		
+	<footer>
+	
+	<div class="row">
+            <div class="col-md-6 col-md-offset-3">
+               
+				<p><a href="kontakt.html">Kontakt</a>
+				<a href="agb.html">AGB</a>
+				<a href="impressum.html">Impressum</a>
+			</p>
+            </div>
+	</div>
+	
+	</footer>  
     </body>
 </html>
