alle Html Seiten hinzugefügt und routes+application geändert

--- a/app/views/fahrzeuguebersicht.scala.html
+++ b/app/views/fahrzeuguebersicht.scala.html
@@ -1,36 +1,15 @@
-@main() {
+@main("Fahrzeugpark") {
 <main>
-		
-		<div id="bootstrapCarousel">
-			
-			<div id="boxAbholung">
-				<p>Abholung</p>
-				<select size="1">
-					<option value="">XXX</option>
-					<option value="">XXX</option>
-					<option value="">XXX</option>
-					<option value="">XXX</option>
-				</select>
-				<input type="text" placeholder="DATUM" name="datum">
-				<input type="text" placeholder="ZEIT" name="zeit">
-			</div>
-			<div id="boxRückgabe">
-				<p>Rückgabe</p>
-				<select size="1" id="zeichen">
-					<option value="">XXX</option>
-					<option value="">XXX</option>
-					<option value="">XXX</option>
-					<option value="">XXX</option>
-				</select>
-				<input type="text" placeholder="DATUM" name="datum">
-				<input type="text" placeholder="ZEIT" name="zeit">
-			</div>
-		
-			<input type="button" value="Anfrage starten" onclick="">
-
-		</div>
 	
-		</main>
+	<h1>Unser Fahrzeugpark</h1>
+	
+	<div>
+		<p>
+		BMW X6<br>
+		<img src="img/bspauto.jpg" alt="LOGO"> Beschreibung über Auto
+	</div>
+
+</main>
     
 
 }
