--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -38,13 +38,13 @@
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav">
                     <li>
-                        <a href="index.html">Mieten</a>
+                        <a href="@routes.Application.index.html">Mieten</a>
                     </li>
                     <li>
-						<a href="fahrzeuguebersicht.html">Fahrzeugmodelle</a>
+						<a href="@routes.Application.fahrzeuguebersicht.html">Fahrzeugmodelle</a>
                     </li>
                     <li>
-                        <a href="ueberuns.html">ÜberUns</a>
+                        <a href="@routes.Application.ueberUns.html">ÜberUns</a>
                     </li>
                 </ul>
             </div>
@@ -62,9 +62,9 @@
 	<div class="row">
             <div class="col-md-6 col-md-offset-3">
                
-				<p><a href="kontakt.html">Kontakt</a>
-				<a href="agb.html">AGB</a>
-				<a href="impressum.html">Impressum</a>
+				<p><a href="@routes.Application.kontakt.html">Kontakt</a>
+				<a href="@routes.Application.agb.html">AGB</a>
+				<a href="@routes.impressum.html">Impressum</a>
 			</p>
             </div>
 	</div>
