--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -5,11 +5,12 @@
 <html>
     <head>
         <title>@title</title>
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<meta charset="UTF-8">
 		<link href="@routes.Assets.at("stylesheets/bootstrap.min.css")" rel="stylesheet">
 		<link rel="stylesheet" type="text/css" href="@routes.Assets.at("stylesheets/style.css")">
-		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
-		<script src="@routes.Assets.at("javascripts/bootstrap.min.js")"></script>
+        <link rel="shortcut icon" type="image/png" href="@routes.Assets.at("images/favicon.png")">
+		
 		
 		
     </head>
@@ -26,7 +27,7 @@
         <div class="container">
             <!-- Brand and toggle get grouped for better mobile display -->
             <div class="navbar-header">
-                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
                     <span class="sr-only">Toggle navigation</span>
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
@@ -35,18 +36,18 @@
                 
             </div>
             <!-- Collect the nav links, forms, and other content for toggling -->
-            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-                <ul class="nav navbar-nav">
-                    <li>
-                        <a href="@routes.Application.index.html">Mieten</a>
+            <div class="collapse navbar-collapse">
+               <ul class="nav navbar-nav">
+                    <li class="@("active".when(title == "Startseite | Mieten"))">
+                        <a href="@routes.Application.index()">Mieten</a>
                     </li>
-                    <li>
-						<a href="@routes.Application.fahrzeuguebersicht.html">Fahrzeugmodelle</a>
+                    <li class="@("active".when(title == "Fuhrpark"))">
+						<a href="@routes.Application.fahrzeuguebersicht()">Fahrzeugmodelle</a>
                     </li>
-                    <li>
-                        <a href="@routes.Application.ueberUns.html">ÜberUns</a>
+                    <li class="@("active".when(title == "Ueber Uns"))">
+                        <a href="@routes.Application.ueberUns()">ÜberUns</a>
                     </li>
-                </ul>
+                </ul> 
             </div>
             <!-- /.navbar-collapse -->
         </div>
@@ -62,13 +63,13 @@
 	<div class="row">
             <div class="col-md-6 col-md-offset-3">
                
-				<p><a href="@routes.Application.kontakt.html">Kontakt</a>
-				<a href="@routes.Application.agb.html">AGB</a>
-				<a href="@routes.impressum.html">Impressum</a>
-			</p>
+				<p class="pull-right"><a href="@routes.Application.agb()">AGB</a> | <a href="@routes.Application.kontakt()">Kontakt</a> | <a href="@routes.Application.impressum()">Impressum</a></p>
+			
             </div>
 	</div>
 	
 	</footer>  
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+    <script src="@routes.Assets.at("javascripts/bootstrap.min.js")"></script>
     </body>
 </html>
