--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -19,7 +19,7 @@
 	<!-- Logo -->
 	 <div class="row">
             <div class="col-md-6 col-md-offset-3">
-                <a href="/"><img class="img-responsive img-rounded" src="@routes.Assets.at("img/logo.jpg")" alt="Logo"></a>
+                <a href="/"><img class="img-responsive img-rounded" src="@routes.Assets.at("images/logo.jpg")" alt="Logo"></a>
             </div>
 	</div>
 		<!-- Navigation -->
@@ -58,7 +58,7 @@
 	
         @content
 		
-	<footer>
+	<footer class="footer">
 	
 	<div class="row">
             <div class="col-md-6 col-md-offset-3">
