--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -9,7 +9,9 @@
 		<meta charset="UTF-8">
 		<link href="@routes.Assets.at("stylesheets/bootstrap.min.css")" rel="stylesheet">
 		<link rel="stylesheet" type="text/css" href="@routes.Assets.at("stylesheets/style.css")">
-        <link rel="shortcut icon" type="image/png" href="@routes.Assets.at("images/favicon.png")">
+        <link rel="shortcut icon" href="@routes.Assets.at("images/favicon.ico")">
+        <link rel="stylesheet" type="text/css" href="@routes.Assets.at("stylesheets/datepicker3.css")">
+
 		
 		
 		
@@ -69,7 +71,10 @@
 	</div>
 	
 	</footer>  
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
     <script src="@routes.Assets.at("javascripts/bootstrap.min.js")"></script>
+    <script src="@routes.Assets.at("javascripts/bootstrap-datepicker.js")"></script>
+    <script src="@routes.Assets.at("javascripts/bootstrap-datepicker.de.js")"></script>
+
     </body>
 </html>
