--- a/app/views/fahrzeuguebersicht.scala.html
+++ b/app/views/fahrzeuguebersicht.scala.html
@@ -1,14 +1,51 @@
-@main("Fahrzeugpark") {
+@main("Fuhrpark") {
 <main>
-	
-	<h1>Unser Fahrzeugpark</h1>
-	
-	<div>
-		<p>
-		BMW X6<br>
-		<img src="img/bspauto.jpg" alt="LOGO"> Beschreibung über Auto
+	<div class="col-md-6 col-md-offset-3">
+		<h1>Unser Fahrzeugpark</h1>
 	</div>
+	
+	<div class="row">
+		<div class="col-md-6 col-md-offset-3">
 
+			<div class="car-list">
+				<h3>BMW X6</h3>
+				<div class="row">
+					<div class="col-md-6">
+						<a href="/"><img class="img-responsive img-rounded" src="@routes.Assets.at("images/logo.jpg")" alt="bspAuto"></a>
+					</div>
+					<div class="col-md-6">
+						<p> Beschreibung eafuhaoefhahfpaheifhapifhapefhaiefhiahfipheifafhafhoahfahfaheofhaofehoaefaofhofhaef</p>
+					</div>
+				</div>
+				
+				<div class="car-list">
+				<h3>Audi A3</h3>
+				<div class="row">
+					<div class="col-md-6">
+						<a href="/"><img class="img-responsive img-rounded" src="@routes.Assets.at("images/logo.jpg")" alt="bspAuto"></a>
+					</div>
+					<div class="col-md-6">
+						<p> Beschreibung eafuhaoefhahfpaheifhapifhapefhaiefhiahfipheifafhafhoahfahfaheofhaofehoaefaofhofhaef</p>
+					</div>
+				</div>
+
+				<div class="car-list">
+				<h3>Mercedes S-Klasse</h3>
+				<div class="row">
+					<div class="col-md-6">
+						<a href="/"><img class="img-responsive img-rounded" src="@routes.Assets.at("images/logo.jpg")" alt="bspAuto"></a>
+					</div>
+					<div class="col-md-6">
+						<p> Beschreibung eafuhaoefhahfpaheifhapifhapefhaiefhiahfipheifafhafhoahfahfaheofhaofehoaefaofhofhaef</p>
+					</div>
+				</div>
+
+
+			</div>
+
+		</div>
+
+	</div>
 </main>
     
 
