--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,7 +1,7 @@
 
 .navbar-inverse .navbar-nav > li > a:hover, .navbar-inverse .navbar-nav > li > a:focus {
     color: #FFF;
-    background-color: #A64848;
+    background-color: #A67845;
 }
 .navbar-inverse {
     background-color: #DD4746;
@@ -38,5 +38,10 @@ footer{
 	margin-left: 20px;
 	margin-right: 20px;
 }
-
-
+.car-list{
+	margin-top: 5px;
+}
+.navbar-inverse .navbar-nav > .active > a, .navbar-inverse .navbar-nav > .active > a:hover, .navbar-inverse .navbar-nav > .active > a:focus {
+    color: #FFF;
+    background-color: #A64848;
+}
