--- a/app/views/fahrzeuguebersicht.scala.html
+++ b/app/views/fahrzeuguebersicht.scala.html
@@ -11,7 +11,7 @@
 				<h3>BMW X6</h3>
 				<div class="row">
 					<div class="col-md-6">
-						<a href="/"><img class="img-responsive img-rounded" src="@routes.Assets.at("images/logo.jpg")" alt="bspAuto"></a>
+						<a href="/"><img class="img-responsive img-rounded" src="@routes.Assets.at("images/bmwx6.jpg")" alt="bspAuto"></a>
 					</div>
 					<div class="col-md-6">
 						<p> Beschreibung eafuhaoefhahfpaheifhapifhapefhaiefhiahfipheifafhafhoahfahfaheofhaofehoaefaofhofhaef</p>
@@ -22,7 +22,7 @@
 				<h3>Audi A3</h3>
 				<div class="row">
 					<div class="col-md-6">
-						<a href="/"><img class="img-responsive img-rounded" src="@routes.Assets.at("images/logo.jpg")" alt="bspAuto"></a>
+						<a href="/"><img class="img-responsive img-rounded" src="@routes.Assets.at("images/audia3.jpg")" alt="bspAuto"></a>
 					</div>
 					<div class="col-md-6">
 						<p> Beschreibung eafuhaoefhahfpaheifhapifhapefhaiefhiahfipheifafhafhoahfahfaheofhaofehoaefaofhofhaef</p>
@@ -30,10 +30,10 @@
 				</div>
 
 				<div class="car-list">
-				<h3>Mercedes S-Klasse</h3>
+				<h3>Honda Civic</h3>
 				<div class="row">
 					<div class="col-md-6">
-						<a href="/"><img class="img-responsive img-rounded" src="@routes.Assets.at("images/logo.jpg")" alt="bspAuto"></a>
+						<a href="/"><img class="img-responsive img-rounded" src="@routes.Assets.at("images/bspAuto.jpg")" alt="bspAuto"></a>
 					</div>
 					<div class="col-md-6">
 						<p> Beschreibung eafuhaoefhahfpaheifhapifhapefhaiefhiahfipheifafhafhoahfahfaheofhaofehoaefaofhofhaef</p>
