--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -33,8 +33,8 @@ main{
 }
 footer{
 	margin-top: 10px;
-	margin-left: 20px;
-	margin-right: 20px;
+	margin-left: auto;
+	margin-right: auto;
 }
 .car-list{
 	margin-top: 5px;
