--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -28,8 +28,9 @@
 	margin-top: 5px;
 }
 main{
-	margin-left: 20px;
-	margin-right: 20px;
+	margin-left: auto;
+	margin-right: auto;
+	background-color: #CCFFFF;
 }
 footer{
 	margin-top: 10px;
