--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -56,10 +56,9 @@
         <!-- /.container -->
     </nav>
 	</header>
-	
-	
-        @content
-		
+	<main>
+		@content
+	</main>
 	<footer class="footer">
 	
 	<div class="row">
