--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -56,9 +56,12 @@
 						<div class="timeauswahl">
 							<input type="time" placeholder="00:00" name="time">
 						</div>
-						<button id="btn-anfrage" type="button" class="btn btn-danger">Anfrage starten</button>
+						
 			 	</div>
-	
+			 	<div class="col-md-1 col-md-offset-1">
+			 		<button id="btn-anfrage" type="button" class="btn btn-danger">Anfrage starten</button>
+			 	</div>
+			
 		</div>
 
 				
