--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -62,9 +62,9 @@
 	<footer class="footer">
 	
 	<div class="row">
-            <div class="col-md-6 col-md-offset-3">
+            <div class="col-md-2 col-md-offset-3">
                
-				<p class="pull-right"><a href="@routes.Application.agb()">AGB</a> | <a href="@routes.Application.kontakt()">Kontakt</a> | <a href="@routes.Application.impressum()">Impressum</a></p>
+				<p><a href="@routes.Application.agb()">AGB</a> | <a href="@routes.Application.kontakt()">Kontakt</a> | <a href="@routes.Application.impressum()">Impressum</a></p>
 			
             </div>
 	</div>
