--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -28,14 +28,16 @@
 	margin-top: 5px;
 }
 main{
-	margin-left: auto;
-	margin-right: auto;
-	background-color: #CCFFFF;
+	padding-left: 10px;
+	padding-right: 10px;
+	padding-top: 5px;
+	background-color: lightgrey;
+	padding-bottom: 20px;
 }
 footer{
 	margin-top: 10px;
-	margin-left: auto;
-	margin-right: auto;
+	padding-left: 5px;
+	padding-right: auto;
 }
 .car-list{
 	margin-top: 5px;
