--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -10,8 +10,10 @@
 		<link href="@routes.Assets.at("stylesheets/bootstrap.min.css")" rel="stylesheet">
 		<link rel="stylesheet" type="text/css" href="@routes.Assets.at("stylesheets/style.css")">
         <link rel="shortcut icon" href="@routes.Assets.at("images/favicon.ico")">
-        <link rel="stylesheet" type="text/css" href="@routes.Assets.at("stylesheets/datepicker3.css")">
-
+		<link rel="stylesheet" type="text/css" href="@routes.Assets.at("stylesheets/default.css")">
+        <link rel="stylesheet" type="text/css" href="@routes.Assets.at("stylesheets/default.date.css")">
+		<link rel="stylesheet" type="text/css" href="@routes.Assets.at("stylesheets/default.time.css")">
+		
 		
 		
 		
@@ -70,10 +72,12 @@
 	</div>
 	
 	</footer>  
-	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+	<script src="@routes.Assets.at("javascripts/jquery-1.11.1.js")"></script>
+	<script src="@routes.Assets.at("javascripts/picker.js")"></script>
+	<script src="@routes.Assets.at("javascripts/picker.date.js")"></script>
+	<script src="@routes.Assets.at("javascripts/picker.time.js")"></script>
     <script src="@routes.Assets.at("javascripts/bootstrap.min.js")"></script>
-    <script src="@routes.Assets.at("javascripts/bootstrap-datepicker.js")"></script>
-    <script src="@routes.Assets.at("javascripts/bootstrap-datepicker.de.js")"></script>
-
+	<script src="@routes.Assets.at("javascripts/de_DE.js")"></script>
+	
     </body>
 </html>
