--- a/app/views/buchungsuebersicht.scala.html
+++ b/app/views/buchungsuebersicht.scala.html
@@ -1,20 +1,17 @@
-@main("Bestelluebersicht") {
+@main("Buchungsuebersicht") {
 
-	
-	<h1>Bestellübersicht</h1>
-	<p>
-	Fahrzeug: BMW X6....<br>
-	Von: 20.12.14<br>
-	Bis: 28.12.14<br>
-	Preis: 240€<br><br>
-	
-	<input type="checkbox" name="AGBakzeptiern" value="AGBakzeptiern"> AGB´s akzeptieren<br>
-	 <input type="submit" value="buchen"> 
-	</p>
-	
-	
-	
-
-    
+	<div class="row">
+		<div class="col-md-3 col-md-offset-3">
+			<h1>Bestellübersicht</h1>
+			<div class="row">
+					<div class="col-md-6">
+						<a href="/"><img class="img-responsive img-rounded" src="@routes.Assets.at("images/bmwx6.jpg")" alt="bspAuto"></a>
+					</div>
+					<div class="col-md-6">
+						<p> Beschreibung eafuhaoefhahfpaheifhapifhapefhaiefhiahfipheifafhafhoahfahfaheofhaofehoaefaofhofhaef</p>
+					</div>
+				</div>
+		</div>
+	</div>  
 
 }
