--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -31,9 +31,8 @@
 
 						<div class="dateauswahl">
 						
-						 <pre class="pre--demo"><code data-language="javascript">// The time picker (<a href="time.htm">read the docs</a>)
-$('.timepicker').pickatime()</code></pre>
-        <fieldset class="fieldset fieldset--demo"><div class="fieldset__wrapper"><input class="fieldset__input js__timepicker" type="text" placeholder="Try me&hellip;"></div></fieldset>
+						 
+        <fieldset class="fieldset fieldset--demo"><div class="fieldset__wrapper"><input class="fieldset__input js__timepicker" type="text" placeholder="Abholzeit" onclick()="pickdate"></div></fieldset>
 	
 
      
