--- a/app/views/ueberUns.scala.html
+++ b/app/views/ueberUns.scala.html
@@ -1,12 +1,10 @@
 @main("Ueber Uns") {
 
-	<h1>Über uns</h1>
-	
-	<p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam</p>
-	
-	<img src="img/ueber_uns.jpg" alt="Ein Bild der Geschäftsführer">
-	
-	
-    
+	<div class="row">
+		<div class="col-md-3 col-md-offset-3">
+			<h1>Über uns</h1>
+			<p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam</p>
+		</div>
+	</div>  
 
 }
