--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -1,10 +1,10 @@
 @main("Startseite | Mieten") {
 
 <script> function pickdate (){
-			$('dateauswahl').pickadate()	
+			$('.dateauswahl').pickadate()	
 		}
 		function picktime (){
-			$('timeauswahl').pickatime()
+			$('.timeauswahl').pickatime()
 		}
 	</script>
 
@@ -33,11 +33,11 @@
 						</div>
 
 						<div class="dateauswahl">
-							<input type="date" placeholder="dd.mm.yyyy" onclick="pickdate()" name="datum">
+							<input type="text" placeholder="dd.mm.yyyy" onclick="pickdate()" name="datum">
 						</div>
 
 						<div class="timeauswahl">
-							<input type="time" placeholder="00:00" onclick="picktime()" name="time">
+							<input type="text" placeholder="00:00" onclick="picktime()" name="time">
 						</div>
 
 
@@ -59,10 +59,10 @@
   							</ul>
 						</div>
 						<div class="dateauswahl">
-							<input type="date" placeholder="dd.mm.yyyy" onclick="pickdate()" name="datum">
+							<input type="text" placeholder="dd.mm.yyyy" onclick="pickdate()" name="datum">
 						</div>
 						<div class="timeauswahl">
-							<input type="time" placeholder="00:00" onclick="picktime()" name="time">
+							<input type="text" placeholder="00:00" onclick="picktime()" name="time">
 						</div>
 						
 			 	</div>
