--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -1,11 +1,11 @@
 @main("Startseite | Mieten") {
 
-<script> function pickdate (){
-			$('.dateauswahl').pickadate()	
-		}
-		function picktime (){
-			$('.timeauswahl').pickatime()
-		}
+	<script>	function pickdate (){
+					$('.dateauswahl').pickadate();	
+				}
+				function picktime (){
+					$('.timeauswahl').pickatime();
+				}
 	</script>
 
 	<div class="row">
@@ -32,12 +32,12 @@
   							</ul>
 						</div>
 
-						<div class="dateauswahl">
-							<input type="text" placeholder="dd.mm.yyyy" onclick="pickdate()" name="datum">
+						<div>
+							<input class="dateauswahl" type="text" placeholder="dd.mm.yyyy" onclick="pickdate()" name="datum">
 						</div>
 
-						<div class="timeauswahl">
-							<input type="text" placeholder="00:00" onclick="picktime()" name="time">
+						<div>
+							<input class="timeauswahl" type="text" placeholder="00:00" onclick="picktime()" name="time">
 						</div>
 
 
@@ -58,11 +58,11 @@
 							    <li role="presentation"><a role="menuitem" tabindex="-1" href="#">München</a></li>
   							</ul>
 						</div>
-						<div class="dateauswahl">
-							<input type="text" placeholder="dd.mm.yyyy" onclick="pickdate()" name="datum">
+						<div>
+							<input class="dateauswahl" type="text" placeholder="dd.mm.yyyy" onclick="pickdate()" name="datum">
 						</div>
-						<div class="timeauswahl">
-							<input type="text" placeholder="00:00" onclick="picktime()" name="time">
+						<div>
+							<input class="timeauswahl" type="text" placeholder="00:00" onclick="picktime()" name="time">
 						</div>
 						
 			 	</div>
