alle Seiten dem design angepasst

--- a/app/views/impressum.scala.html
+++ b/app/views/impressum.scala.html
@@ -1,8 +1,9 @@
 @main("Impressum") {
 	
-	<h1>Impressum</h1>
-	
-<div class='impressum'><p>Angaben gemäß § 5 TMG</p><p>Max Muster <br> 
+		<div class="row">
+		<div class="col-md-4 col-md-offset-3">
+			<h1>Impressum</h1>
+			<p>Angaben gemäß § 5 TMG</p><p>Max Muster <br> 
 Musterweg<br> 
 12345 Musterstadt <br> 
 </p><p><strong>Kontakt:</strong> <br>
@@ -16,7 +17,12 @@ Musterwirtschaftsid<br>
 </p><p><strong>Aufsichtsbehörde:</strong><br>
 Musteraufsicht Musterstadt<br></p><br> 
 
- </div>
+		</div>
+	</div>  
+
+	
+
+
  
 	
 
