--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -9,16 +9,16 @@
 	</script>
 
 	<div class="row">
-		<div class="col-md-3 col-md-offset-3">
+		<div class="col-md-5 col-md-offset-3">
 			<h1>Verfügbarkeit prüfen</h1>
 		</div>
 	</div>	
 
 	 <div class="row">
 	 	<div id="boxMieten">
-            <div class="col-md-1 col-md-offset-3">
+            <div class="col-md-3 col-md-offset-3">
             	
-               		
+               		<h3>Abholung</h3>
                			<div class="dropdown">
   							<button class="btn btn-default dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown">
     							Abholort
@@ -33,11 +33,11 @@
 						</div>
 
 						<div>
-							<input class="dateauswahl" type="text" placeholder="dd.mm.yyyy" onclick="pickdate()" name="datum">
+							<input class="dateauswahl" type="text" placeholder="dd.mm.yyyy" onclick="pickdate()" name="datum" size="29">
 						</div>
 
 						<div>
-							<input class="timeauswahl" type="text" placeholder="00:00" onclick="picktime()" name="time">
+							<input class="timeauswahl" type="text" placeholder="00:00" onclick="picktime()" name="time" size="12" >
 						</div>
 
 
@@ -45,7 +45,8 @@
 
 
 			</div>
-			<div class="col-md-1 col-md-offset-1">
+			<div class="col-md-2 ">
+				<h3>Rückgabe</h3>
 						<div class="dropdown">
   							<button class="btn btn-default dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown">
     							Rückgabeort
@@ -59,22 +60,23 @@
   							</ul>
 						</div>
 						<div>
-							<input class="dateauswahl" type="text" placeholder="dd.mm.yyyy" onclick="pickdate()" name="datum">
+							<input class="dateauswahl" type="text" placeholder="dd.mm.yyyy" onclick="pickdate()" name="datum" size="29">
 						</div>
 						<div>
-							<input class="timeauswahl" type="text" placeholder="00:00" onclick="picktime()" name="time">
+							<input class="timeauswahl" type="text" placeholder="00:00" onclick="picktime()" name="time" size="12">
 						</div>
 						
 			 	</div>
-			 	<div class="col-md-1 col-md-offset-1">
-			 		<button id="btn-anfrage" type="button" class="btn btn-danger">Anfrage starten</button>
-			 	</div>
+			 	
 			
 		</div>
 
 				
 	</div>
-
-		
+	<div class="row">	
+		<div class="col-md-1 col-md-offset-3">
+			 <button id="btn-anfrage" type="button" class="btn btn-danger">Anfrage starten</button>
+		</div>
+	</div>
 
 }
