--- a/app/views/kontakt.scala.html
+++ b/app/views/kontakt.scala.html
@@ -1,7 +1,10 @@
 @main("Kontakt") {
 
-		<h1>Kontakt</h1>
-		<form action="index.html">
+	<div class="row">
+		<div class="col-md-4 col-md-offset-3">
+			<h1>Kontakt</h1>
+
+			<form action="index.html">
 			<div>Sie haben Fragen, Wünsche, Anregungen oder Probleme, die Sie mit uns besprechen möchten?
 			Wir stehen Ihnen rund um die Uhr für Fragen gern zur Verfügung! 
 			</div>
@@ -10,9 +13,9 @@
 			<p><input type="text" placeholder="Ihr Anliegen.." name="anliegen"></p>
 			<p><input type="submit" value="Abschicken" name="submit"></p>
 		</form>
-	
 
+		</div>
+	</div>  
 
-    
 
 }
