--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -10,12 +10,12 @@
 		<link href="@routes.Assets.at("stylesheets/bootstrap.min.css")" rel="stylesheet">
 		<link rel="stylesheet" type="text/css" href="@routes.Assets.at("stylesheets/style.css")">
         <link rel="shortcut icon" href="@routes.Assets.at("images/favicon.ico")">
-		<link rel="stylesheet" type="text/css" href="@routes.Assets.at("stylesheets/default.css")">
+        <link rel="stylesheet" type="text/css" href="@routes.Assets.at("stylesheets/default.css")">
         <link rel="stylesheet" type="text/css" href="@routes.Assets.at("stylesheets/default.date.css")">
 		<link rel="stylesheet" type="text/css" href="@routes.Assets.at("stylesheets/default.time.css")">
 		
 		
-		
+	
 		
     </head>
     <body>
@@ -46,7 +46,7 @@
                         <a href="@routes.Application.index()">Mieten</a>
                     </li>
                     <li class="@("active".when(title == "Fuhrpark"))">
-						<a href="@routes.Application.fahrzeuguebersicht()">Fahrzeugmodelle</a>
+						<a href="@routes.Application.fahrzeuguebersicht()">Fuhrpark</a>
                     </li>
                     <li class="@("active".when(title == "Ueber Uns"))">
                         <a href="@routes.Application.ueberUns()">ÜberUns</a>
@@ -78,6 +78,6 @@
 	<script src="@routes.Assets.at("javascripts/picker.time.js")"></script>
     <script src="@routes.Assets.at("javascripts/bootstrap.min.js")"></script>
 	<script src="@routes.Assets.at("javascripts/de_DE.js")"></script>
-	
+
     </body>
 </html>
