--- a/app/views/registrieren.scala.html
+++ b/app/views/registrieren.scala.html
@@ -1,16 +1,16 @@
 @main("Registrieren") {
 
-	<h1>Registrieren</h1>
-	<div>
-		<p>Zur Registrierung füllen Sie bitte die folgenden Felder
+	<div class="row">
+		<div class="col-md-4 col-md-offset-3">
+			<h1>Registrieren</h1>
+			<p>Zur Registrierung füllen Sie bitte die folgenden Felder
 			vollständig aus.</p>
 
 		<form method="post" action="#">
 			<h2>Logindaten</h2>
 			<p>
 				EMail <input type="email" name="email" placeholder="EMail" required>
-			<p>
-			<p>
+
 				Passwort <input type="password" name="passwort"
 					placeholder="Passwort" required>
 			</p>
@@ -25,18 +25,17 @@
 			<p>
 				Vorname <input type="text" name="Vorname" placeholder="Vorname"
 					required>
-			<p>
+			
 				Nachname <input type="text" name="Nachname" placeholder="Nachname"
 					required>
 			</p>
 			<p>
-				Straße, Hausnummer <input type="text" name="Straße"
-					placeholder="Straße"> <input type="text" name="Hausnummer"
-					placeholder="Hausnummer">
+				Straße <input type="text" name="Straße" placeholder="Straße"> 
+				Hausnummer <input type="text" name="Hausnummer" placeholder="Hausnummer">
 			</p>
 			<p>
-				Ort, PLZ <input type="text" name="Ort" placeholder="Ort"> <input
-					type="text" name="PLZ" placeholder="PLZ">
+				Ort <input type="text" name="Ort" placeholder="Ort"> 
+				PLZ <input type="text" name="PLZ" placeholder="PLZ">
 			</p>
 			<p>
 				<input type="checkbox" name="AGBs"> <a href="agb.html"> AGB's</a> gelesen und
@@ -47,10 +46,17 @@
 			</p>
 		</form>
 
+		</div>
+	</div>  
+
+	
+
+		
 
 
 
-	</div>
+
+
 	
     
 
