--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -2,10 +2,12 @@
 .navbar-inverse .navbar-nav > li > a:hover, .navbar-inverse .navbar-nav > li > a:focus {
     color: #FFF;
     background-color: #A67845;
+    font-size: 20px;
 }
 .navbar-inverse {
     background-color: #DD4746;
     border-color: #A64848;
+    font-size: 16px;
 }
 .navbar {
     border-radius: 0px;
@@ -25,7 +27,7 @@
 	margin-top: 5px;
 }
 #btn-anfrage{
-	margin-top: 5px;
+	margin-top: 10px;
 }
 main{
 	padding-left: 10px;
@@ -45,4 +47,7 @@ footer{
 .navbar-inverse .navbar-nav > .active > a, .navbar-inverse .navbar-nav > .active > a:hover, .navbar-inverse .navbar-nav > .active > a:focus {
     color: #FFF;
     background-color: #A64848;
+}
+.row{
+	margin-right: 0px;
 }
