footer in neuer Farbe

--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -33,11 +33,11 @@
 						</div>
 
 						<div>
-							<input class="dateauswahl" type="text" placeholder="dd.mm.yyyy" onclick="pickdate()" name="datum" size="29">
+							<input class="dateauswahl" type="text" placeholder="Datum" onclick="pickdate()" name="datum" size="29">
 						</div>
 
 						<div>
-							<input class="timeauswahl" type="text" placeholder="00:00" onclick="picktime()" name="time" size="12" >
+							<input class="timeauswahl" type="text" placeholder="Uhrzeit" onclick="picktime()" name="time" size="12" >
 						</div>
 
 
@@ -60,10 +60,10 @@
   							</ul>
 						</div>
 						<div>
-							<input class="dateauswahl" type="text" placeholder="dd.mm.yyyy" onclick="pickdate()" name="datum" size="29">
+							<input class="dateauswahl" type="text" placeholder="Datum" onclick="pickdate()" name="datum" size="29">
 						</div>
 						<div>
-							<input class="timeauswahl" type="text" placeholder="00:00" onclick="picktime()" name="time" size="12">
+							<input class="timeauswahl" type="text" placeholder="Uhrzeit" onclick="picktime()" name="time" size="12">
 						</div>
 						
 			 	</div>
