--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -40,6 +40,9 @@ footer{
 	margin-top: 10px;
 	padding-left: 5px;
 	padding-right: auto;
+	background-color: #DD4746;
+	padding-top: 5px;
+	margin-top: 20px;
 }
 .car-list{
 	margin-top: 5px;
@@ -50,4 +53,10 @@ footer{
 }
 .row{
 	margin-right: 0px;
+}
+footer a{
+	color: #fff;
+}
+li a{
+	position: center;
 }
