--- a/app/views/kontakt.scala.html
+++ b/app/views/kontakt.scala.html
@@ -11,7 +11,10 @@
 			<p><input type="text" placeholder="Name" name="name"></p>
 			<p><input type="text" placeholder="E-Mail" name="email"></p>
 			<p><input type="text" placeholder="Ihr Anliegen.." name="anliegen"></p>
-			<p><input type="submit" value="Abschicken" name="submit"></p>
+		
+			 <button id="btn-anfrage" type="button" class="btn btn-danger">Anfrage starten</button>
+	
+			</div>
 		</form>
 
 		</div>
