--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -78,6 +78,7 @@
 	<script src="@routes.Assets.at("javascripts/picker.time.js")"></script>
     <script src="@routes.Assets.at("javascripts/bootstrap.min.js")"></script>
 	<script src="@routes.Assets.at("javascripts/de_DE.js")"></script>
+    <script src="@routes.Assets.at("javascripts/javascript.js")"></script>
 
     </body>
 </html>
