--- a/app/views/registrieren.scala.html
+++ b/app/views/registrieren.scala.html
@@ -1,7 +1,7 @@
 @main("Registrieren") {
 
 	<div class="row">
-		<div class="col-md-4 col-md-offset-3">
+		<div class="col-md-5 col-md-offset-3">
 			<h1>Registrieren</h1>
 			<p>Zur Registrierung füllen Sie bitte die folgenden Felder
 			vollständig aus.</p>
@@ -41,9 +41,11 @@
 				<input type="checkbox" name="AGBs"> <a href="agb.html"> AGB's</a> gelesen und
 				akzeptiert.
 			</p>
-			<p>
-				<input type="button" value="Jetzt Regestrieren!">
-			</p>
+			
+			
+			 <button id="btn-anfrage" type="button" class="btn btn-danger">Anfrage starten</button>
+
+	</div>
 		</form>
 
 		</div>
