--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -13,6 +13,7 @@
         <link rel="stylesheet" type="text/css" href="@routes.Assets.at("stylesheets/default.css")">
         <link rel="stylesheet" type="text/css" href="@routes.Assets.at("stylesheets/default.date.css")">
 		<link rel="stylesheet" type="text/css" href="@routes.Assets.at("stylesheets/default.time.css")">
+        <link rel="stylesheet" type="text/css" href="@routes.Assets.at("stylesheets/bootstrap-select.min.css")">
 		
 		
 	
@@ -78,6 +79,7 @@
 	<script src="@routes.Assets.at("javascripts/picker.time.js")"></script>
     <script src="@routes.Assets.at("javascripts/bootstrap.min.js")"></script>
 	<script src="@routes.Assets.at("javascripts/de_DE.js")"></script>
+    <script src="@routes.Assets.at("javascripts/bootstrap-select.min.js")"></script>
     <script src="@routes.Assets.at("javascripts/javascript.js")"></script>
 
     </body>
