--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -1,12 +1,5 @@
 @main("Startseite | Mieten") {
 
-	<script>	function pickdate (){
-					$('.dateauswahl').pickadate();	
-				}
-				function picktime (){
-					$('.timeauswahl').pickatime();
-				}
-	</script>
 
 	<div class="row">
 		<div class="col-md-5 col-md-offset-3">
@@ -19,17 +12,12 @@
             <div class="col-md-3 col-md-offset-3">
             	
                		<h3>Abholung</h3>
-               			<div class="dropdown">
-  							<button class="btn btn-default dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown">
-    							Abholort
-    							<span class="caret"></span>
-  							</button>
- 							 <ul class="dropdown-menu" role="menu" aria-labelledby="dropdownMenu1">
-							    <li role="presentation"><a role="menuitem" tabindex="-1" href="#">Singen</a></li>
-							    <li role="presentation"><a role="menuitem" tabindex="-1" href="#">Konstanz</a></li>
-							    <li role="presentation"><a role="menuitem" tabindex="-1" href="#">Stuttgart</a></li>
-							    <li role="presentation"><a role="menuitem" tabindex="-1" href="#">München</a></li>
-  							</ul>
+	               		<div>
+	               			<select class="selectpicker" data-width="auto">
+							<option>Konstanz</option>
+							<option>Singen</option>
+							<option>Radolfzell</option>
+							</select>
 						</div>
 
 						<div>
@@ -47,17 +35,12 @@
 			</div>
 			<div class="col-md-2 ">
 				<h3>Rückgabe</h3>
-						<div class="dropdown">
-  							<button class="btn btn-default dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown">
-    							Rückgabeort
-    							<span class="caret"></span>
-  							</button>
- 							 <ul class="dropdown-menu" role="menu" aria-labelledby="dropdownMenu1">
-							    <li role="presentation"><a role="menuitem" tabindex="-1" href="#">Singen</a></li>
-							    <li role="presentation"><a role="menuitem" tabindex="-1" href="#">Konstanz</a></li>
-							    <li role="presentation"><a role="menuitem" tabindex="-1" href="#">Stuttgart</a></li>
-							    <li role="presentation"><a role="menuitem" tabindex="-1" href="#">München</a></li>
-  							</ul>
+						<div>
+	               			<select class="selectpicker" data-width="auto">
+							<option>Konstanz</option>
+							<option>Singen</option>
+							<option>Radolfzell</option>
+							</select>
 						</div>
 						<div>
 							<input class="dateauswahl" type="text" placeholder="Datum" onclick="pickdate()" name="datum" size="29">
