--- a/app/views/registrieren.scala.html
+++ b/app/views/registrieren.scala.html
@@ -38,7 +38,7 @@
 				PLZ <input type="text" name="PLZ" placeholder="PLZ">
 			</p>
 			<p>
-				<input type="checkbox" name="AGBs"> <a href="agb.html"> AGB's</a> gelesen und
+				<input type="checkbox" name="AGBs"> <a href="@routes.Application.agb()"> AGB's</a> gelesen und
 				akzeptiert.
 			</p>
 			
