--- a/app/views/fahrzeuguebersicht.scala.html
+++ b/app/views/fahrzeuguebersicht.scala.html
@@ -1,20 +1,22 @@
+@(beschreibung: String) 
 @main("Fuhrpark") {
 
 	<div class="col-md-6 col-md-offset-3">
 		<h1>Unser Fahrzeugpark</h1>
 	</div>
+	<!--  hersteller: String, modell: String, preisProTag: String, bild: String) -->
 	
 	<div class="row">
 		<div class="col-md-6 col-md-offset-3">
 
 			<div class="car-list">
-				<h3>BMW X6</h3>
+				<h3>hersteller modell</h3>
 				<div class="row">
 					<div class="col-md-6">
 						<a href="/"><img class="img-responsive img-rounded" src="@routes.Assets.at("images/bmwx6.jpg")" alt="bspAuto"></a>
 					</div>
 					<div class="col-md-6">
-						<p> Beschreibung eafuhaoefhahfpaheifhapifhapefhaiefhiahfipheifafhafhoahfahfaheofhaofehoaefaofhofhaef</p>
+						<p> @beschreibung preisProTag </p>
 					</div>
 				</div>
 				
@@ -47,6 +49,6 @@
 
 	</div>
 
-    
-
+    </div>
+</div>
 }
