--- a/app/views/fahrzeuguebersicht.scala.html
+++ b/app/views/fahrzeuguebersicht.scala.html
@@ -1,4 +1,4 @@
-@(beschreibung: String) 
+@(beschreibung: String, hersteller: String, modell: String, preisProTag: String, bild: String)
 @main("Fuhrpark") {
 
 	<div class="col-md-6 col-md-offset-3">
@@ -8,18 +8,19 @@
 	
 	<div class="row">
 		<div class="col-md-6 col-md-offset-3">
-
+<!--Dummy Objekt   -->
 			<div class="car-list">
-				<h3>hersteller modell</h3>
+				<h3>@hersteller @modell</h3>
 				<div class="row">
 					<div class="col-md-6">
 						<a href="/"><img class="img-responsive img-rounded" src="@routes.Assets.at("images/bmwx6.jpg")" alt="bspAuto"></a>
 					</div>
 					<div class="col-md-6">
-						<p> @beschreibung preisProTag </p>
+						<p> @beschreibung</p>
+						<p>Preis pro Tag: @preisProTag Euro </p>
 					</div>
 				</div>
-				
+<!--Ende Dummy Objekt   -->				
 				<div class="car-list">
 				<h3>Audi A3</h3>
 				<div class="row">
