bild dynamisch auslesen

--- a/app/views/fahrzeuguebersicht.scala.html
+++ b/app/views/fahrzeuguebersicht.scala.html
@@ -14,12 +14,11 @@
 				<h3>@f.getHersteller() @f.getModell()</h3>
 				<div class="row">
 					<div class="col-md-6">
-						<img class="img-responsive img-rounded" src="@routes.Assets.at("images/bmwx6.jpg")" alt="bspAuto">
+						<img class="img-responsive img-rounded" src=@f.getBild() alt="bspAuto">
 						</div>
 					<div class="col-md-6">
 						<p>@f.getBeschreibung()</p>
 						<p>Preis pro Tag: @f.getPreisProTag() Euro </p>
-						<h1>@f.getBild()</h1> 
 					</div>
 				</div>
 <!--Ende Dummy Objekt   -->				
