--- a/app/views/kontakt.scala.html
+++ b/app/views/kontakt.scala.html
@@ -1,24 +1,25 @@
 @main("Kontakt") {
-
+	
 	<div class="row">
 		<div class="col-md-4 col-md-offset-3">
 			<h1>Kontakt</h1>
-
-			<form action="index.html">
-			<div>Sie haben Fragen, Wünsche, Anregungen oder Probleme, die Sie mit uns besprechen möchten?
-			Wir stehen Ihnen rund um die Uhr für Fragen gern zur Verfügung! 
-			</div>
-			<p><input type="text" placeholder="Name" name="name"></p>
-			<p><input type="text" placeholder="E-Mail" name="email"></p>
-			<p><input type="text" placeholder="Ihr Anliegen.." name="anliegen"></p>
-		
-			 <button id="btn-anfrage" type="button" class="btn btn-danger">Anfrage starten</button>
-	
-			</div>
-		</form>
-
+				<div><p>Sie haben Fragen, Wünsche, Anregungen oder Probleme, die Sie mit uns besprechen möchten?</p>
+						<p>Wir stehen Ihnen rund um die Uhr für Fragen gern zur Verfügung!</p> 
+				</div><br>
+			<form action="mailto:viktorwich@@googlemail.com" enctype="text/plain" method="post" name="formular" onSubmit="return checkKontakt(this)">
+				<p><input type="text" placeholder="Name.." name="name" size="30"></p>
+				<p><input type="email" placeholder="Email.." name="email" size="30"></p>
+				<textarea name="nachricht" placeholder="Ihre Nachricht an uns.." rows="5" cols="45"></textarea><br>
+				<p id ="dringend">Dringlichkeit:</p>
+				<p><input type="radio" name="Dringlichkeit" value="Hoch">HOCH
+				<input type="radio" name="Dringlichkeit" value="Normal">NORMAL</p>
+				<p><button type="reset">Eintragungen löschen</button></p>
+				<button id="btn-anfrage" type="submit" class="btn btn-danger" value="senden">Senden...</button>
+			</form>
+			
 		</div>
-	</div>  
+	</div>
+
 
 
 }
