--- a/app/views/login.scala.html
+++ b/app/views/login.scala.html
@@ -1,40 +1,42 @@
 @main("Login") {
 
-	<div class="row">
-		<div class="col-md-2 col-md-offset-3">
-			<div class="container">
-    <div class="row">
-		<div class="span12">
-			<form class="form-horizontal" action="" method="POST">
-			  <fieldset>
-			    
-			      <h1>Login</h1>
-			    </div>
-			    <div class="control-group">
-			      <!-- Username -->
-			      <label class="control-label"  for="username">Username</label>
-			      <div class="controls">
-			        <input type="text" id="username" name="username" placeholder="" class="input-xlarge">
-			      </div>
-			    </div>
-			    <div class="control-group">
-			      <!-- Password-->
-			      <label class="control-label" for="password">Password</label>
-			      <div class="controls">
-			        <input type="password" id="password" name="password" placeholder="" class="input-xlarge">
-			      </div>
-			    </div>
-			    <div class="control-group">
-			      <!-- Button -->
-			      <div class="controls">
-			        <button id="btn-anfrage" class="btn btn-danger">Login</button>
-			      </div>
-			    </div>
-			  </fieldset>
-			</form>
+<div class="row">
+	<div class="col-md-2 col-md-offset-3">
+		<div class="container">
+			<div class="row">
+				<div class="span12">
+					<form class="form-horizontal" action="checkLogin" method="GET">
+						<fieldset>
+
+							<h1>Login</h1>
+				</div>
+				<div class="control-group">
+					<!-- Username -->
+					<label class="control-label" for="username">E-Mail</label>
+					<div class="controls">
+						<input type="text" id="email" name="email" placeholder="E-Mail"
+							class="input-xlarge">
+					</div>
+				</div>
+				<div class="control-group">
+					<!-- Password-->
+					<label class="control-label" for="password">Passwort</label>
+					<div class="controls">
+						<input type="password" id="password" name="password"
+							placeholder="Passwort" class="input-xlarge">
+					</div>
+				</div>
+				<div class="control-group">
+					<!-- Button -->
+					<div class="controls">
+						<button id="btn-anfrage" class="btn btn-danger" type="submit">Login</button>
+					</div>
+				</div>
+				</fieldset>
+				</form>
+			</div>
 		</div>
 	</div>
 </div>
-	</div>  
 
 }
