login auf post umgestellt

--- a/app/views/login.scala.html
+++ b/app/views/login.scala.html
@@ -5,10 +5,11 @@
 		<div class="container">
 			<div class="row">
 				<div class="span12">
-					<form class="form-horizontal" action="checkLogin" method="GET">
+					<form class="form-horizontal" action="checkLogin" method="POST">
 						<fieldset>
 
 							<h1>Login</h1>
+							
 				</div>
 				<div class="control-group">
 					<!-- Username -->
