--- a/app/views/fahrzeugwahl.scala.html
+++ b/app/views/fahrzeugwahl.scala.html
@@ -1,26 +1,27 @@
-@(beschreibung: String, hersteller: String, modell: String, preisProTag: String, bild: String)
+@(fahrzeuge: List[model.Fahrzeug])
 @main("Fahrzeugwahl") {
 
 	<div class="col-md-7 col-md-offset-3">
-		<h1>WÃ¤hle ein Fahrzeug</h1>
+		<h1>Verfügbare Fahrzeuge</h1>
 	</div>
 	<!--  hersteller: String, modell: String, preisProTag: String, bild: String) -->
 	
 	<div class="row">
 		<div class="col-md-6 col-md-offset-3">
+		@for(f <- fahrzeuge){
 <!--Dummy Objekt   -->
 			<div class="car-list">
-				<h3>@hersteller @modell</h3>
+				<h3>@f.getHersteller @f.getModell</h3>
 				<div class="row">
 					<div class="col-md-6">
-						<a href="/"><img class="img-responsive img-rounded" src="@routes.Assets.at("images/bmwx6.jpg")" alt="bspAuto"></a>
+						<img class="img-responsive img-rounded" src=@f.getBild() alt="bspAuto">
 					</div>
 					<div class="col-md-6">
-						<p> @beschreibung</p>
-						<p>Preis pro Tag: @preisProTag Euro </p>
+						<p> @f.getBeschreibung</p>
+						<p>Preis pro Tag: @f.getPreisProTag Euro </p>
 					</div>
 				</div>
-			</div>
+			</div>}
 		</div>
  	</div>
 	
