--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -9,7 +9,7 @@
 
 	 <div class="row">
 	 	<div id="boxMieten">
-		<form action="checkFahrzeugwahl(this)" method="get" name="formular">
+		<form action="checkFahrzeugwahl" method="get" name="formular">
             <div class="col-md-3 col-md-offset-3">
             	
                		<h3>Abholung</h3>
