registrieren seite verbessert und link auf login seite hinzugefügt

--- a/app/views/login.scala.html
+++ b/app/views/login.scala.html
@@ -27,6 +27,9 @@
 							placeholder="Passwort" class="input-xlarge">
 					</div>
 				</div>
+				<div>
+				<a href="registrieren">Registrieren</a>
+				</div>
 				<div class="control-group">
 					<!-- Button -->
 					<div class="controls">
