checkregistrieren funktion angelegt, daten müssen nur noch in db gespeichert werden

--- a/app/views/registrieren.scala.html
+++ b/app/views/registrieren.scala.html
@@ -9,7 +9,7 @@
 </div>
 <div class="row">
 	<div class="col-md-7 col-md-offset-3">
-		<form method="post" action="#">
+		<form method="POST" action="checkRegistrieren">
 			<h2>Logindaten</h2>
 			<div class="row">
 				<div class="col-md-2">EMail</diV>
@@ -20,7 +20,7 @@
 			<div class="row">
 				<div class="col-md-2">Passwort</diV>
 				<div class="col-md-4">
-					<input type="password" name="passwort" placeholder="Passwort"
+					<input type="password" name="password" placeholder="Passwort"
 						required>
 				</diV>
 			</div>
@@ -28,37 +28,37 @@
 			<div class="row">
 				<div class="col-md-2">Vorname</diV>
 				<div class="col-md-4">
-					<input type="text" name="Vorname" placeholder="Vorname" required>
+					<input type="text" name="vorname" placeholder="Vorname" required>
 				</diV>
 			</div>
 			<div class="row">
 				<div class="col-md-2">Nachname</diV>
 				<div class="col-md-4">
-					<input type="text" name="Nachname" placeholder="Nachname" required>
+					<input type="text" name="nachname" placeholder="Nachname" required>
 				</diV>
 			</div>
 			<div class="row">
 				<div class="col-md-2">Straße</diV>
 				<div class="col-md-4">
-					<input type="text" name="Straße" placeholder="Straße" required>
+					<input type="text" name="strasse" placeholder="Straße" required>
 				</diV>
 			</div>
 			<div class="row">
 				<div class="col-md-2">Hausnummer</diV>
 				<div class="col-md-4">
-					<input type="text" name="Hausnummer" placeholder="Hausnummer" required>
+					<input type="number" name="hausnummer" placeholder="Hausnummer" required>
 				</diV>
 			</div>
 			<div class="row">
 				<div class="col-md-2">Ort</diV>
 				<div class="col-md-4">
-					<input type="text" name="Ort" placeholder="Ort" required>
+					<input type="text" name="ort" placeholder="Ort" required>
 				</diV>
 			</div>
 			<div class="row">
 				<div class="col-md-2">PLZ</diV>
 				<div class="col-md-4">
-					<input type="text" name="PLZ" placeholder="PLZ" required>
+					<input type="number" name="plz" placeholder="PLZ" required>
 				</diV>
 			</div>
 			<div class="row">
