cache problem gelöst und weiteres

--- a/app/views/fahrzeugwahl.scala.html
+++ b/app/views/fahrzeugwahl.scala.html
@@ -1,7 +1,7 @@
 @(fahrzeuge: List[model.Fahrzeug]) @main("Fahrzeugwahl") {
 
 <div class="col-md-7 col-md-offset-3">
-	<h1>Verfügbare Fahrzeuge</h1>
+	<h1>VerfÃ¼gbare Fahrzeuge</h1>
 </div>
 <!--  hersteller: String, modell: String, preisProTag: String, bild: String) -->
 
@@ -20,7 +20,7 @@
 				<div class="col-md-6">
 					<p>@f.getBeschreibung</p>
 					<p>Preis pro Tag: @f.getPreisProTag Euro</p>
-					<button id="btn-anfrage" class="btn btn-danger" type="submit">Auswählen</button>
+					<button id="btn-anfrage" class="btn btn-danger" type="submit">AuswÃ¤hlen</button>
 				</div>
 			</div>
 			</form>
