--- a/app/views/login.scala.html
+++ b/app/views/login.scala.html
@@ -15,8 +15,8 @@
 					<!-- Username -->
 					<label class="control-label" for="username">E-Mail</label>
 					<div class="controls">
-						<input type="text" id="email" name="email" placeholder="E-Mail"
-							class="input-xlarge">
+						<input type="email" id="email" name="email" placeholder="E-Mail"
+							class="input-xlarge" required>
 					</div>
 				</div>
 				<div class="control-group">
@@ -24,7 +24,7 @@
 					<label class="control-label" for="password">Passwort</label>
 					<div class="controls">
 						<input type="password" id="password" name="password"
-							placeholder="Passwort" class="input-xlarge">
+							placeholder="Passwort" class="input-xlarge" required>
 					</div>
 				</div>
 				<div>
