--- a/app/views/buchungsuebersicht.scala.html
+++ b/app/views/buchungsuebersicht.scala.html
@@ -2,7 +2,7 @@
 @main("Buchungsuebersicht") {
 
 <div class="col-md-6 col-md-offset-3">
-	<h1>Buchungsübersicht</h1>
+	<h1>BuchungsÃ¼bersicht</h1>
 </div>
 
 <div class="row">
@@ -18,9 +18,9 @@
 			<strong>Abholstation:</strong> @b.getAbholStation()<br>
 			<strong>Abholdatum:</strong> @b.getAbholdatum()<br>
 			<strong>Abholzeit:</strong> @b.getAbholzeit()<br>
-			<strong>Rückgabestation:</strong> @b.getRueckgabeStation()<br>
-			<strong>Rückgabedatum:</strong> @b.getRueckgabedatum()<br>
-			<strong>Rückgabezeit:</strong> @b.getRueckgabezeit()
+			<strong>RÃ¼ckgabestation:</strong> @b.getRueckgabeStation()<br>
+			<strong>RÃ¼ckgabedatum:</strong> @b.getRueckgabedatum()<br>
+			<strong>RÃ¼ckgabezeit:</strong> @b.getRueckgabezeit()
 			</p>
 		</div>
 		}}
