--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -1,8 +1,23 @@
-@(a : Int) @main("Startseite | Mieten") {
+@(a : Int, eingeloggt : Int) @main("Startseite | Mieten") {
+
+<div class="row">
+	<div class="col-md-1 col-md-offset-10">
+		@if(eingeloggt == 0){ 
+		<a href="/login"><button type="button" class="btn btn-danger">LOGIN</button></a> 
+		} 
+		@if(eingeloggt == 1){ 
+		<a href="/logout"><button type="button" class="btn btn-danger">LOGOUT</button></a> 
+		}
+	</div>
+</div>
+
+
+
 
 <div class="row">
 	<div class="col-md-7 col-md-offset-3">
 		<h1>Verfügbarkeit prüfen</h1>
+	
 	</div>
 	@if(a == -1){
 	<div class="col-md-7 col-md-offset-3">
