login logout button auf allen seiten hinzugefügt

--- a/app/views/buchungsuebersicht.scala.html
+++ b/app/views/buchungsuebersicht.scala.html
@@ -1,6 +1,12 @@
 @(buchungen: List[model.Buchung])
 @main("Buchungsuebersicht") {
 
+<div class="row">
+	<div class="col-md-1 col-md-offset-8">	
+		<a href="/logout"><button type="button" class="btn btn-danger">LOGOUT</button></a> 		
+	</div>
+</div>
+
 <div class="col-md-6 col-md-offset-3">
 	<h1>Buchungsübersicht</h1>
 </div>
