--- a/app/views/fahrzeugwahl.scala.html
+++ b/app/views/fahrzeugwahl.scala.html
@@ -1,5 +1,11 @@
 @(fahrzeuge: List[model.Fahrzeug]) @main("Fahrzeugwahl") {
 
+<div class="row">
+	<div class="col-md-1 col-md-offset-8">	
+		<a href="/logout"><button type="button" class="btn btn-danger">LOGOUT</button></a> 		
+	</div>
+</div>
+
 <div class="col-md-7 col-md-offset-3">
 	<h1>Verfügbare Fahrzeuge</h1>
 </div>
