--- a/app/views/agb.scala.html
+++ b/app/views/agb.scala.html
@@ -1,4 +1,15 @@
-@main("AGB´s") {
+@(eingeloggt : Int) @main("AGB´s") {
+
+<div class="row">
+	<div class="col-md-1 col-md-offset-8">
+		@if(eingeloggt == 0){ 
+		<a href="/login"><button type="button" class="btn btn-danger">LOGIN</button></a> 
+		} 
+		@if(eingeloggt == 1){ 
+		<a href="/logout"><button type="button" class="btn btn-danger">LOGOUT</button></a> 
+		}
+	</div>
+</div>
 
 	<div class="row">
 		<div class="col-md-5 col-md-offset-3">
