--- a/app/views/impressum.scala.html
+++ b/app/views/impressum.scala.html
@@ -1,5 +1,16 @@
-@main("Impressum") {
-	
+@(eingeloggt : Int) @main("Impressum") {
+
+<div class="row">
+	<div class="col-md-1 col-md-offset-8">
+		@if(eingeloggt == 0){ 
+		<a href="/login"><button type="button" class="btn btn-danger">LOGIN</button></a> 
+		} 
+		@if(eingeloggt == 1){ 
+		<a href="/logout"><button type="button" class="btn btn-danger">LOGOUT</button></a> 
+		}
+	</div>
+</div>
+
 		<div class="row">
 		<div class="col-md-4 col-md-offset-3">
 			<h1>Impressum</h1>
