fahrzeuge alt text| man kann nur noch eingeloggt fahrzeuge mieten| buchungsuebersicht in navigationsleiste aufgenommen

--- a/app/views/fahrzeuguebersicht.scala.html
+++ b/app/views/fahrzeuguebersicht.scala.html
@@ -25,7 +25,7 @@
 				<h3>@f.getHersteller() @f.getModell()</h3>
 				<div class="row">
 					<div class="col-md-6">
-						<img class="img-responsive img-rounded" src=@f.getBild() alt="bspAuto">
+						<img class="img-responsive img-rounded" src=@f.getBild() alt=@f.getHersteller>
 						</div>
 					<div class="col-md-6">
 						<p>@f.getBeschreibung()</p>
