--- a/app/views/login.scala.html
+++ b/app/views/login.scala.html
@@ -31,7 +31,7 @@
 					</div>
 				</div>
 				<div>
-				<a href="registrieren">Registrieren</a>
+				<a href="registrieren">Registrieren</a> Sie sind zum ersten mal hier? 
 				</div>
 				<div class="control-group">
 					<!-- Button -->
