--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -52,6 +52,9 @@
                     <li class="@("active".when(title == "Ueber Uns"))">
                         <a href="@routes.Application.ueberUns()">ÜberUns</a>
                     </li>
+                    <li class="@("active".when(title == "Buchungsuebersicht"))">
+                        <a href="@routes.Application.buchungsuebersicht()">Buchungsuebersicht</a>
+                    </li>
                 </ul> 
             </div>
             <!-- /.navbar-collapse -->
