--- a/app/views/fahrzeugwahl.scala.html
+++ b/app/views/fahrzeugwahl.scala.html
@@ -22,7 +22,7 @@
 			<div class="row">
 				<div class="col-md-6">
 					<img class="img-responsive img-rounded" src=@f.getBild()
-						alt="bspAuto">
+						alt=@f.getHersteller>
 				</div>
 				<div class="col-md-6">
 					<p>@f.getBeschreibung</p>
